public/style.css
/* global */
* {
  font-family: monospace;
  box-sizing: border-box;
}
.app {
  margin: 10px;
  background-color: white;
}

/* Top bar */
.topbar {
  background-color: black;
  display: flex;
  justify-content: space-between;
}
@media (max-width: 600px) {
  .topbar {
    flex-direction: column;
    align-items: center;
    position: fixed;
    top: 5px;
    right: 25px;
    z-index: 1000;
    width: 215px;
  }
}
.title {
  font-size: 22px;
  margin: 5px;
  color: white;
}
.topbar-link-container {
  font-size: 22px;
  margin: 5px;
}
.topbar-button {
  color: red;
  text-decoration: underline;
  background-color: black;
  font-size: 22px;
  border: none;
  cursor: pointer;
}
.topbar-button.inactive {
  color: grey;
  cursor: auto;
}
.topbar-text {
  font-size: 22px;
  margin: 5px;
  color: white;
}
.size-selector {
  font-size: 14px;
  color: black;
  margin: 4px 4px 6px;
  border: 1px solid black;
  border-radius: 0px;
}
#size-form {
  display: inline;
}

/* body flexboxes */
.body-column-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
@media (max-width: 600px) {
  .body-column-container {
    flex-direction: column;
  }
}
.body-column {
  display: flex;
  flex-direction: column;
  justify-content: start;
  width: 49.5%;
}
@media (max-width: 600px) {
  .body-column {
    width: 100%;
  }
}
.sort-container-outer {
  margin-top: 10px;
}
.sort-container-label {
  background-color: black;
  color: white;
  padding-left: 5px;
  padding-top: 2px;
  font-size: 20px;
}
.sort-container {
  height: 200px;
  border: 1px solid black;
  padding-left: 2px;
  position: relative;
}
.sort-bar-container {
  height: 100%;
  display: inline-block;
  position: relative;
}
.sort-bar {
  border-left: 1px solid black;
  border-right: 1px solid black;
  border-top: 1px solid black;
  position: absolute;
  bottom: 0;
  width: 90%;
}
.sort-bar.sorted {
  background-color: firebrick;
}
.sort-bar.comparing {
  background-color: IndianRed;
}
.sort-bar.unsorted {
  background-color: lightgray;
}

/* Popup */
.popup-outer {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
}
.popup-inner {
  position: absolute;
  left: 30%;
  right: 30%;
  top: 28%;
  bottom: 35%;
  background: white;
  border: 1px solid black;
  padding: 15px;
}
.popup-inner-container {
  display: flex;
  flex-direction: column;
  margin: 15px;
  align-items: center;
}
.popup-inner button {
  color: black;
  font-size: 18px;
  border: none;
  cursor: pointer;
  width: 100px;
  border: 1px solid black;
  margin-top: 25px;
}
.popup-inner button div {
  font-size: 11px;
}
.popup-inner button div span {
  color: rgb(216, 38, 38);
}
.popup-title {
  font-size: 28px;
  text-align: center;
  margin-top: 20px;
  margin-bottom: 5px;
}
.popup-text {
  text-align: center;
  font-size: 14px;
}

